--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WEBSTUDIO</title>
 </head>
 <body>
     <header>
@@ -25,7 +25,8 @@
     <main>
 <section>
     <h1>Effective Solutions for Your Business</h1>
-    <button> Order Service</button>
+    <button type="button"> Order Service</button>
+    
 </section>
 <section>
     <ul>
@@ -55,16 +56,42 @@
     <h2>What are we doing</h2>
     <ul>
         <li>
-            <img width="360" height="300" src="./img/photo-1.png" alt="photo 1">
+            <img width="360" height="300" src="./img/photo-1.jpg" alt="image 1">
         </li>
         <li>
-            <img width="360" height="300" src="./img/photo-2.png" alt="photo 2">
+            <img width="360" height="300" src="./img/photo-2.jpg" alt="image 2">
         </li>
         <li>
-            <img width="360" height="300" src="./img/photo-3.png" alt="photo 3">
+            <img width="360" height="300" src="./img/photo-3.jpg" alt=" image 3">
         </li>
     </ul>
 </section>
+<section>
+    <h2>Our Team</h2>
+   <ul>
+    <li> <img width="264" height="260" src="./img/photo-4.jpg" alt="image 4">
+        <h4>Mark Guerrero</h4>
+        <p>Product Designer</p>
+        </li>
+    <li>
+        <li> <img width="264" height="260" src="./img/photo-5.jpg" alt="image 5">
+        <h4>Tom Ford</h4>
+        <p>Frontend Developer</p>
+    </li>
+    <li>
+        <li> <img width="264" height="260" src="./img/photo-6.jpg" alt="image 6">
+            <h4>Camila Garcia</h4>
+            <p>Marketing</p>
+    </li>
+    <li>
+        <li> <img width="264" height="260" src="./img/photo-7.jpg" alt="image 7">
+            <h4>Daniel Wilson</h4>
+            <p>UI Designer</p>
+    </li>
+   </ul>
+
+</section>
+
     </main>
 
 
