--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </nav>
 <ul>
     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+    <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
 </ul>
     </header>
     <main>
@@ -28,7 +28,8 @@
     <button type="button"> Order Service</button>
     
 </section>
-<section>
+<h2>skills</h2>
+<section >
     <ul>
         <li>
             <h3>Strategy</h3>
@@ -56,36 +57,36 @@
     <h2>What are we doing</h2>
     <ul>
         <li>
-            <img width="360" height="300" src="./img/photo-1.jpg" alt="image 1">
+            <img width="360" height="300" src="./images/photo-1.jpg" alt="computer">
         </li>
         <li>
-            <img width="360" height="300" src="./img/photo-2.jpg" alt="image 2">
+            <img width="360" height="300" src="./images/photo-2.jpg" alt="phone">
         </li>
         <li>
-            <img width="360" height="300" src="./img/photo-3.jpg" alt=" image 3">
+            <img width="360" height="300" src="./images/photo-3.jpg" alt=" yellow phone">
         </li>
     </ul>
 </section>
 <section>
     <h2>Our Team</h2>
    <ul>
-    <li> <img width="264" height="260" src="./img/photo-4.jpg" alt="image 4">
-        <h4>Mark Guerrero</h4>
+    <li> <img width="264" height="260" src="./images/photo-4.jpg" alt="Mark Guerrero">
+        <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
         </li>
     <li>
-        <li> <img width="264" height="260" src="./img/photo-5.jpg" alt="image 5">
-        <h4>Tom Ford</h4>
+        <li> <img width="264" height="260" src="./images/photo-5.jpg" alt="Tom Ford">
+        <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
     </li>
     <li>
-        <li> <img width="264" height="260" src="./img/photo-6.jpg" alt="image 6">
-            <h4>Camila Garcia</h4>
+        <li> <img width="264" height="260" src="./images/photo-6.jpg" alt="Camila Garcia">
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
     </li>
     <li>
-        <li> <img width="264" height="260" src="./img/photo-7.jpg" alt="image 7">
-            <h4>Daniel Wilson</h4>
+        <li> <img width="264" height="260" src="./images/photo-7.jpg" alt="Daniel Wilson">
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
     </li>
    </ul>
@@ -97,6 +98,8 @@
 
 
     <footer>
+        <h3>WEBSTUDIO</h3>
+        <P>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</P>
 
     </footer>
 </body>
